--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
     "style-loader": "^0.21.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
