--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.7.1"
   },
   "dependencies": {
-    "react-hot-loader": "^4.3.3"
+    "react-hot-loader": "^4.3.3",
+    "react-router-dom": "^6.2.1"
   }
 }
