--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^5.5.0",
+    "qyj-react-components": "^0.0.9",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "sass": "^1.45.1",
